--- a/frontend/index.html
+++ b/frontend/index.html
@@ -165,6 +165,66 @@
     </main>
     <!-- Main layout -->
 
+    <!--Footer -->
+    <footer class="footer bg-dark text-white">
+        <div class="container">
+          <div class="row row-grid align-items-center mb-10 ">
+            <div class="col-lg-2">
+              <img
+                src="assets/img/portfolio/logo.png"
+                alt="logo"
+                style="width:80px;"
+              />
+            </div>
+            <div class="col-md-10 align-center  ">
+              <ul class="nav nav-footer justify-content-end">
+                <li class="nav-item m-auto ">
+                  Address
+                  <p style="width: 185px;">
+                    <font size="2"
+                      >San Isidro, San Vicente Chicoloapan de Juárez Centro,
+                      Chimalhucan, 56370 Chicoloapan de Juárez, Méx.</font
+                    >
+                  </p>
+                </li>
+                <li class="nav-item m-auto">
+                  Telephone
+                  <p>55-55-55-55-55</p>
+                </li>
+                <li class="nav-item m-auto">
+                  E-mail
+                  <p>dev.ti2019@gmail.com</p>
+                </li>
+                <li class="nav-item  m-auto">
+                  Social Networks
+                  <div class="col">
+                    <a
+                      target="_blank"
+                      href="https://twitter.com/creativetim"
+                      class="btn btn-neutral btn-icon-only btn-instagram btn-round btn-lg"
+                      data-toggle="tooltip"
+                      data-original-title="Follow us"
+                    >
+                      <i class="fa fa-instagram"></i>
+                    </a>
+                    <a
+                      target="_blank"
+                      href="https://www.facebook.com/creativetim"
+                      class="btn btn-neutral btn-icon-only btn-facebook btn-round btn-lg"
+                      data-toggle="tooltip"
+                      data-original-title="Like us"
+                    >
+                      <i class="fa fa-facebook-square"></i>
+                    </a>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </footer>
+    <!-- Footer -->
+
   <!-- Core -->
   <script src="assets/vendor/jquery/jquery.min.js"></script>
   <script src="assets/vendor/popper/popper.min.js"></script>
